force-app/main/default/objects/Payment__c/fields/Anno_di_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Anno_di_Pagamento__c</fullName>
    <formula>TEXT(YEAR( Data_di_Pagamento__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anno di Pagamento</label>
    <type>Text</type>
</CustomField>