force-app/main/default/objects/Payment__c/fields/Pagamento_Shadow__c.field-meta.xml
<CustomField>
    <fullName>Pagamento_Shadow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pagamento Shadow</label>
    <referenceTo>Pagamento_Shadow__c</referenceTo>
    <relationshipName>Pagamenti</relationshipName>
    <type>Lookup</type>
</CustomField>