force-app/main/default/objects/Payment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Da Pagare</fullName>
                <default>true</default>
                <label>Da Pagare</label>
            </value>
            <value>
                <fullName>Pagato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>