force-app/main/default/objects/Payment__c/listViews/Pagamenti_Da_Pagare.listView-meta.xml
<ListView>
    <fullName>Pagamenti_Da_Pagare</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Budget__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Da Pagare</value>
    </filters>
    <label>Pagamenti Da Pagare</label>
</ListView>