force-app/main/default/objects/Payment__c/listViews/Pagamenti_Pagati.listView-meta.xml
<ListView>
    <fullName>Pagamenti_Pagati</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Budget__c</columns>
    <columns>Status__c</columns>
    <columns>Data_di_Pagamento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pagato</value>
    </filters>
    <label>Pagamenti Pagati</label>
</ListView>